--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "autoprefixer": "^10.4.16",
     "axios": "^1.6.2",
     "dotenv": "^16.3.1",
+    "ldrs": "^1.0.1",
     "monaco-themes": "^0.4.4",
     "postcss": "^8.4.32",
     "react": "^18.2.0",
