--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "short_name": "React App",
+  "short_name": "Noel's Untangled Code Editor",
   "name": "Create React App Sample",
   "icons": [
     {
